--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="style.css">
     <title>User Management</title>
 </head>
 
@@ -48,7 +48,7 @@
             </div>
             <div class="carousel-inner ">
                 <div class="carousel-item active" data-bs-interval="10000">
-                    <img src="/slider2.png" height="500px" width="20px" class="d-block w-100" alt="...">
+                    <img src="/slider2.png" class="d-block w-100 banner-c" alt="...">
                     <div class="carousel-caption d-none d-md-block text-light">
                         <h5>First slide label</h5>
                         <p>Some representative placeholder content for the first slide.</p>
@@ -73,7 +73,8 @@
                     <div class="row">
                         <div class="col-sm-6 mb-3 mb-sm-0">
                             <div class="card shadow">
-                                <img src="https://d368ufu7xgcs86.cloudfront.net/17302-1565762855.jpg" class="rounded-3 card-img-top" alt="...">
+                                <img src="https://d368ufu7xgcs86.cloudfront.net/17302-1565762855.jpg"
+                                    class="rounded-3 card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Kati Ghaati</h5>
                                     <p class="card-text">Created by BABAR for attack in Chanderi,</p>
@@ -83,7 +84,8 @@
                         </div>
                         <div class="col-sm-6">
                             <div class="card shadow">
-                                <img src="https://tse3.mm.bing.net/th?id=OIP.Rb2Twhm_oYupm6gZwbMl9AHaDs&pid=Api&P=0&h=220" class="rounded-3 card-img-top" alt="...">
+                                <img src="https://tse3.mm.bing.net/th?id=OIP.Rb2Twhm_oYupm6gZwbMl9AHaDs&pid=Api&P=0&h=220"
+                                    class="rounded-3 card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Special title treatment</h5>
                                     <p class="card-text">With supporting text below as a natural lead-in to additional
