--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light text-body bg-secondary p-2 text-white bg-opacity-25  "
+    <nav class="navbar navbar-expand-lg navbar-light text-body bg-secondary p-2 text-white bg-opacity-25 w-100 fixed-top "
         style="z-index: 1;">
         <div class="container-fluid mx-5">
             <a class="navbar-brand " style="color: rgb(253 231 13 / 66%) !important;" href="#">Navbar</a>
@@ -20,8 +20,8 @@
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div>
-                <ul class="nav justify-content-end ">
+            <div id="navbarSupportedContent" class="collapse navbar-collapse">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 justify-content-end ">
                     <li class="nav-item">
                         <a class="nav-link active text-light" aria-current="page" href="/">Home</a>
                     </li>
