--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light text-body bg-secondary p-2 text-white bg-opacity-25 w-100 fixed-top "
         style="z-index: 1;">
-        <div class="container-fluid mx-5">
+        <div class="container-fluid mx-2">
             <a class="navbar-brand " style="color: rgb(253 231 13 / 66%) !important;" href="#">Navbar</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div id="navbarSupportedContent" class="collapse navbar-collapse">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 justify-content-end ">
+            <div id="navbarSupportedContent" class="collapse navbar-collapse navbar-menu">
+                <ul class="navbar-nav justify-content-end">
                     <li class="nav-item">
                         <a class="nav-link active text-light" aria-current="page" href="/">Home</a>
                     </li>
@@ -37,7 +37,7 @@
     </nav>
 
     <section>
-        <div id="carouselExampleDark" class="carousel carousel-dark slide " style="margin-top: -60px;">
+        <div id="carouselExampleDark" class="carousel carousel-dark slide">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
                     aria-current="true" aria-label="Slide 1"></button>
