--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>User Management</title>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light text-body bg-secondary p-2 text-white bg-opacity-25 w-100 fixed-top "
-        style="z-index: 1;">
+        style="z-index: 10;">
         <div class="container-fluid mx-2">
-            <a class="navbar-brand " style="color: rgb(253 231 13 / 66%) !important;" href="#">Navbar</a>
+            <img src="/assist/nikelogo-removebg-preview.png" style="height:42px; color: aliceblue;" alt="logo">
+            <!-- <a class="navbar-brand " style="color: rgb(253 231 13 / 66%) !important;" href="#">Navbar</a> -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -23,13 +24,13 @@
             <div id="navbarSupportedContent" class="collapse navbar-collapse navbar-menu">
                 <ul class="navbar-nav justify-content-end">
                     <li class="nav-item">
-                        <a class="nav-link active text-light" aria-current="page" href="/">Home</a>
+                        <a class="nav-link active text-light" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active text-light" aria-current="page" href="/login.html">Login</a>
+                        <a class="nav-link active text-light" href="/auth/login.html">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active text-light" aria-current="page" href="/signup.html">Signup</a>
+                        <a class="nav-link active text-light" href="/auth/signup.html">Signup</a>
                     </li>
                 </ul>
             </div>
@@ -47,25 +48,34 @@
                     aria-label="Slide 3"></button>
             </div>
             <div class="carousel-inner ">
-                <div class="carousel-item active" data-bs-interval="10000">
-                    <img src="/slider2.png" class="d-block w-100 banner-c" alt="...">
-                    <div class="carousel-caption d-none d-md-block text-light">
+                <!-- <div class="carousel-item active" data-bs-interval="10000"><div class="carousel-caption d-none d-md-block text-light"></div>
                         <h5>First slide label</h5>
                         <p>Some representative placeholder content for the first slide.</p>
-                    </div>
+                    </div> -->
+                <img src="/assist/Ond1l7E-nike-shoe-wallpaper-removebg-preview.png" class="d-block w-60 h-250 banner-c"
+                    alt="...">
+                <div>
+                    <h1 class="display-6">Step into a New Air</h1>
+                    <p class="lead"></p>
+                    <hr class="my-2">
+                    <p>Featuring the new Air Max 270 React</p>
+                    <a class="btn btn-primary btn-lg" href="#" role="button">Shop</a>
                 </div>
+                <!--  <h4 style="float:right">NIKE AIR MAX 2023 iD</h4> -->
+            
 
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+        </div>
+
+
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
         </div>
         <section class="my-4">
             <div class="container">
@@ -73,24 +83,23 @@
                     <div class="row">
                         <div class="col-sm-6 mb-3 mb-sm-0">
                             <div class="card shadow">
-                                <img src="https://d368ufu7xgcs86.cloudfront.net/17302-1565762855.jpg"
+                                <img src="/assist/tPUU5HX-nike-shoe-wallpaper-removebg-preview.png"
                                     class="rounded-3 card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Kati Ghaati</h5>
-                                    <p class="card-text">Created by BABAR for attack in Chanderi,</p>
-                                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                                    <h5 class="card-title">MJE</h5>
+                                    <p class="card-text">James Winsoar</p>
+                                    <a href="#" class="btn btn-primary">Add to cart</a>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 mb-3 mb-sm-0">
                             <div class="card shadow">
-                                <img src="https://tse3.mm.bing.net/th?id=OIP.Rb2Twhm_oYupm6gZwbMl9AHaDs&pid=Api&P=0&h=220"
-                                    class="rounded-3 card-img-top" alt="...">
+                                <img src="/assist/air-max-pulse-womens-shoes-TLnkLm-removebg-preview.png"
+                                    class="rounded-1 card-img-top" style="height: 461px; width: 400px;" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Special title treatment</h5>
-                                    <p class="card-text">With supporting text below as a natural lead-in to additional
-                                        content.</p>
-                                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                                    <h5 class="card-title">Nike Air Max Pulse Women's</h5>
+                                    <!-- <p class="card-text"></p> -->
+                                    <a href="#" class="btn btn-primary">Find More</a>
                                 </div>
                             </div>
                         </div>
