--- a/index.html
+++ b/index.html
@@ -37,54 +37,30 @@
         </div>
     </nav>
 
-    <section>
-        <div id="carouselExampleDark" class="carousel carousel-dark slide">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner ">
-                <!-- <div class="carousel-item active" data-bs-interval="10000"><div class="carousel-caption d-none d-md-block text-light"></div>
-                        <h5>First slide label</h5>
-                        <p>Some representative placeholder content for the first slide.</p>
-                    </div> -->
-                <img src="/assist/Ond1l7E-nike-shoe-wallpaper-removebg-preview.png" class="d-block w-60 h-250 banner-c"
-                    alt="...">
-                <div>
+     <section style="margin-top: 10vh;">
+
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 col-md-6 col-lg-6">
+                    <img src="/assist/Ond1l7E-nike-shoe-wallpaper-removebg-preview.png" class="header-img" alt="...">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-6">
                     <h1 class="display-6">Step into a New Air</h1>
                     <p class="lead"></p>
                     <hr class="my-2">
                     <p>Featuring the new Air Max 270 React</p>
                     <a class="btn btn-primary btn-lg" href="#" role="button">Shop</a>
                 </div>
-                <!--  <h4 style="float:right">NIKE AIR MAX 2023 iD</h4> -->
-            
-
-        </div>
-
-
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
+            </div>
         </div>
         <section class="my-4">
             <div class="container">
                 <div class="container text-center border border-2 border-grey p-3 rounded-3 shadow ">
                     <div class="row">
-                        <div class="col-sm-6 mb-3 mb-sm-0">
+                        <div class="col-sm-6 col-md-6 col-lg-3">
                             <div class="card shadow">
                                 <img src="/assist/tPUU5HX-nike-shoe-wallpaper-removebg-preview.png"
-                                    class="rounded-3 card-img-top" alt="...">
+                                class="product-img" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">MJE</h5>
                                     <p class="card-text">James Winsoar</p>
@@ -92,13 +68,35 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-6 mb-3 mb-sm-0">
+                        <div class="col-sm-6 col-md-6 col-lg-3">
                             <div class="card shadow">
                                 <img src="/assist/air-max-pulse-womens-shoes-TLnkLm-removebg-preview.png"
-                                    class="rounded-1 card-img-top" style="height: 461px; width: 400px;" alt="...">
+                                    class="product-img" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Nike Air Max Pulse Women's</h5>
-                                    <!-- <p class="card-text"></p> -->
+                                    <h5 class="card-title">Nike Air Max Pulse</h5>
+                                    <p class="card-text">James Winsoar</p>
+                                    <a href="#" class="btn btn-primary">Find More</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-6 col-lg-3">
+                            <div class="card shadow">
+                                <img src="/assist/mshoe1-removebg-preview.png"
+                                class="product-img" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">MJE</h5>
+                                    <p class="card-text">James Winsoar</p>
+                                    <a href="#" class="btn btn-primary">Add to cart</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-6 col-lg-3">
+                            <div class="card shadow">
+                                <img src="/assist/mshoe-removebg-preview.png"
+                                    class="product-img" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Nike Air Max Pulse</h5>
+                                    <p class="card-text">James Winsoar</p>
                                     <a href="#" class="btn btn-primary">Find More</a>
                                 </div>
                             </div>
@@ -107,7 +105,7 @@
                 </div>
             </div>
         </section>
-    </section>
+    </section> 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
