--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div id="navbarSupportedContent" class="collapse navbar-collapse navbar-menu">
                 <ul class="navbar-nav justify-content-end">
                     <li class="nav-item">
-                        <a class="nav-link active text-light" href="/">Home</a>
+                        <a class="nav-link active text-dark" href="/">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active text-light" href="/auth/login.html">Login</a>
@@ -42,14 +42,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-6">
-                    <img src="/assist/Ond1l7E-nike-shoe-wallpaper-removebg-preview.png" class="header-img" alt="...">
+                    <img src="/assist/tPUU5HX-nike-shoe-wallpaper-removebg-preview.png" class="header-img" alt="...">
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6">
                     <h1 class="display-6">Step into a New Air</h1>
                     <p class="lead"></p>
                     <hr class="my-2">
                     <p>Featuring the new Air Max 270 React</p>
-                    <a class="btn btn-primary btn-lg" href="#" role="button">Shop</a>
+                    <a class="btn btn-primary btn-lg d-inline-flex focus-ring focus-ring-primary py-1 px-2 text-decoration-none border rounded-2 " href="/auth/signup.html" role="button">Shop</a>
                 </div>
             </div>
         </div>
@@ -59,12 +59,12 @@
                     <div class="row">
                         <div class="col-sm-6 col-md-6 col-lg-3">
                             <div class="card shadow">
-                                <img src="/assist/tPUU5HX-nike-shoe-wallpaper-removebg-preview.png"
+                                <img src="https://m.media-amazon.com/images/I/61XqKiKiHIL._AC_UL1500_.jpg"
                                 class="product-img" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">MJE</h5>
-                                    <p class="card-text">James Winsoar</p>
-                                    <a href="#" class="btn btn-primary">Add to cart</a>
+                                    <h5 class="card-title">Nike</h5>
+                                    <p class="card-text">Nike men's Air Jordon 1 Mid</p>
+                                    <a href="#" class="btn btn-primary">Add to Cart</a>
                                 </div>
                             </div>
                         </div>
@@ -73,9 +73,9 @@
                                 <img src="/assist/air-max-pulse-womens-shoes-TLnkLm-removebg-preview.png"
                                     class="product-img" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Nike Air Max Pulse</h5>
-                                    <p class="card-text">James Winsoar</p>
-                                    <a href="#" class="btn btn-primary">Find More</a>
+                                    <h5 class="card-title">Nike</h5>
+                                    <p class="card-text">Nike Air Sport Shoe</p>
+                                    <a href="#" class="btn btn-primary">Add to Cart</a>
                                 </div>
                             </div>
                         </div>
@@ -84,19 +84,19 @@
                                 <img src="/assist/mshoe1-removebg-preview.png"
                                 class="product-img" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">MJE</h5>
-                                    <p class="card-text">James Winsoar</p>
+                                    <h5 class="card-title">Nike</h5>
+                                    <p class="card-text">Sneaker's</p>
                                     <a href="#" class="btn btn-primary">Add to cart</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-sm-6 col-md-6 col-lg-3">
                             <div class="card shadow">
-                                <img src="/assist/mshoe-removebg-preview.png"
+                                <img src="/assist/card2.png"
                                     class="product-img" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Nike Air Max Pulse</h5>
-                                    <p class="card-text">James Winsoar</p>
+                                    <h5 class="card-title">Nike</h5>
+                                    <p class="card-text">Nike Air Max Pulse</p>
                                     <a href="#" class="btn btn-primary">Find More</a>
                                 </div>
                             </div>
