--- a/auth/signup.html
+++ b/auth/signup.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="#"></a>
             <div>
                 <ul class="nav justify-content-end">
                     <li class="nav-item">
