--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
         </div>
     </nav>
 
-     <section style="margin-top: 10vh;">
+    <section style="margin-top: 10vh;">
 
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-6">
                     <img src="/assist/tPUU5HX-nike-shoe-wallpaper-removebg-preview.png" class="header-img" alt="...">
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-6">
-                    <h1 class="display-6">Step into a New Air</h1>
+                <div class="col-sm-12 col-md-6 col-lg-6 m-auto">
+                    <h1 class="display-4 fw-bold">Step into a New Air</h1>
                     <p class="lead"></p>
                     <hr class="my-2">
-                    <p>Featuring the new Air Max 270 React</p>
-                    <a class="btn btn-primary btn-lg d-inline-flex focus-ring focus-ring-primary py-1 px-2 text-decoration-none border rounded-2 " href="/auth/signup.html" role="button">Shop</a>
+                    <p class="fw-medium">Featuring the new Air Max 270 React</p>
+                    <a class="top-btn" href="/auth/signup.html" role="button">Shop</a>
                 </div>
             </div>
         </div>
@@ -60,7 +60,7 @@
                         <div class="col-sm-6 col-md-6 col-lg-3">
                             <div class="card shadow">
                                 <img src="https://m.media-amazon.com/images/I/61XqKiKiHIL._AC_UL1500_.jpg"
-                                class="product-img" alt="...">
+                                    class="product-img" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Nike</h5>
                                     <p class="card-text">Nike men's Air Jordon 1 Mid</p>
@@ -81,8 +81,7 @@
                         </div>
                         <div class="col-sm-6 col-md-6 col-lg-3">
                             <div class="card shadow">
-                                <img src="/assist/mshoe1-removebg-preview.png"
-                                class="product-img" alt="...">
+                                <img src="/assist/mshoe1-removebg-preview.png" class="product-img" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Nike</h5>
                                     <p class="card-text">Sneaker's</p>
@@ -92,12 +91,13 @@
                         </div>
                         <div class="col-sm-6 col-md-6 col-lg-3">
                             <div class="card shadow">
-                                <img src="/assist/card2.png"
-                                    class="product-img" alt="...">
+                                <img src="/assist/card2.png" class="product-img" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Nike</h5>
                                     <p class="card-text">Nike Air Max Pulse</p>
-                                    <a href="#" class="btn btn-primary">Find More</a>
+                                    <a href="#" class="b-ref d-if ai-c g-12 ptb-8 plr-16 bdr-16 td-hn-imp"
+                                        style="--bs-link-hover-color-rgb: 25, 135, 84;">Find More</a>
+                                        <span class="ico ico-modern arrow-right-black"></span>
                                 </div>
                             </div>
                         </div>
@@ -105,7 +105,7 @@
                 </div>
             </div>
         </section>
-    </section> 
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
