--- a/auth/login.html
+++ b/auth/login.html
@@ -33,7 +33,7 @@
         </div>
     </nav>
     <section>
-        <div class="container">
+        <div class="container" style="background-color:#7CAFDB; height: 390px;">
             <div class="row justify-content-center">
                 <!-- Login Form with Custom Width -->
                 <div class="col-12 col-sm-8 col-md-6 col-lg-4">
@@ -49,8 +49,8 @@
                                     <label for="password">Password</label>
                                     <input type="password" class="form-control" id="password" placeholder="Password">
                                 </div>
-                                <button type="submit" class="btn btn-primary btn-block my-2">Submit</button>
-                                <a href="#">Forgot Password</a>
+                                <button type="submit" class="btn btn-light btn-block my-2" style="padding: 6px 14px; border-radius: 20px; background-color: #7CAFDB;">Submit</button>
+                                <a class="fw-light" href="#">Forgot Password</a>
                             </form>
                         </div>
                     </div>
