--- a/auth/signup.html
+++ b/auth/signup.html
@@ -27,7 +27,7 @@
         </div>
     </nav>
     <section>
-        <div class="container">
+        <div class="container" style="background-color:#7CAFDB; height: 460px;">
             <div class="row justify-content-center">
                 <!-- Login Form with Custom Width -->
                 <div class="col-12 col-sm-8 col-md-6 col-lg-4">
@@ -47,7 +47,7 @@
                                     <label for="password">Password</label>
                                     <input type="password" class="form-control bx bx-lock" id="password" placeholder="Password">
                                 </div>
-                                <button type="submit" class="btn btn-primary btn-block my-2">Submit</button>
+                                <button type="submit" class="btn btn-primary btn-block my-2" style="padding: 6px 14px; border-radius: 20px; background-color: #7CAFDB;">Submit</button>
                             </form>
                         </div>
                     </div>
